# wstat

./: Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: fly.yml
src/: main.rs
